glib-macros/tests/closure_compiletest/19-closure-block-no-parens.stderr
error: expected `|`
 --> tests/closure_compiletest/19-closure-block-no-parens.rs:4:27
  |
4 |     closure!(#[strong] v, {println!("foo");});
  |                           ^
